--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "fetch": "^1.1.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
+    "redux-pender": "^2.0.12",
     "styled-components": "^4.1.3"
   },
   "scripts": {
